feat: fix syntax

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               Jasleen Kaur Grewal 
             </h1>
             <h2 class="subtitle">
-              QA automation Engineer, Toronto, ON
+              QA Automation Engineer, Toronto, ON
             </h2>
             <p>
               <a href="docs/Jasleen.Kaur.Grewal- Resume.pdf" class="icon has-text-light">
