feat: push changes

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           <div class="media">
             <div class="media-left">
               <figure class="image is-48x48">
-                <img src="img/pax.png" alt="Placeholder image">
+                <img src="img/pax.jpeg" alt="Placeholder image">
               </figure>
             </div>
             <div class="media-content">
