--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </h2>
             <p>
               <a href="docs/Jasleen.Kaur.Grewal- Resume.pdf" class="icon has-text-light">
-                <i class="fas fa-file-word"></i> <strong>Battle Card</strong>
+                <i class="fas fa-file-word"></i> <strong>Battle-Card</strong>
               </a>
             </p>
           </div>
