--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
           <li>Well-versed in various approaches—functional, integration, regression, performance—ensuring each area of the software gets the attention it deserves.</li><br>
           
-          <li>Experienced in setting up CI/CD pipelines, streamlining workflows for faster, more efficient deployments while keeping quality front and center.</li><br>
+          <li>Experienced in setting up CI/CD pipelines, streamlining workflows for faster, more efficient deployments while keeping quality front and center.</li><br></br>
       </ul>
   
       <h2><strong>A Passion for Quality, Innovation, and DevOps</strong></h2><br>
